# daily-wallpaper

./: .gitignore  README.md  daily-wallpaper.py  pyproject.toml  settings.py  settings.toml
app/: daily-wallpaper.py  main.py  settings.py
providers/: _provider.py  bing.py  provider.py  unsplash.py  wikimedia.py
settings/: settings.py
