[tool.poetry]
name = "daily-wallpaper"
version = "0.1.0"
description = ""
authors = ["Isaac Shoebottom <ir.shoebottom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32"
urllib3 = "^1.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
