[tool.poetry]
name = "DailyWallpaper"
version = "0.1.0"
description = ""
authors = ["Isaac Shoebottom <ir.shoebottom@gmail.com>"]
readme = "README.md"
packages = [
	{ include = "providers"},
	{ include = "settings"},
	{ include = "app"}
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32"
urllib3 = "^1.26"
python-slugify = "^8.0"
tomlkit = "^0.13.2"
croniter = "^5.0"
pywin32 = "^308"

[tool.poetry.scripts]
DailyWallpaper = "app.main:main"

# https://pypi.org/project/poetry-pyinstaller-plugin/
# https://stackoverflow.com/a/78050613
[tool.poetry-pyinstaller-plugin.scripts]
DailyWallpaper = { source = "app/main.py", type = "onedir", bundle = false }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
